@@ -1,3 +1,7 @@
+2006-11-03  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/: Added functions for modifying and removing metadata.
+
 2006-11-01  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/: Updated some documentation.
